--- a/src/app/main-application/main-application.component.html
+++ b/src/app/main-application/main-application.component.html
@@ -6,7 +6,7 @@
     [username]="user_name"
   ></app-header>
 </mat-toolbar>
-<mat-sidenav-container>
+<mat-sidenav-container class="h-100">
   <mat-sidenav
     #sidenav
     role="navigation"
