--- a/src/app/dashboard/patient-dashboard/components/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/dashboard/patient-dashboard/components/patient-dashboard/patient-dashboard.component.html
@@ -8,7 +8,13 @@
   <div class="row">
     <div class="col demographics">
       <div class="col-md-12">
-        <h4>Demographics</h4>
+        <a
+          class="nav-link"
+          [routerLink]="['/demographics/view']"
+          routerLinkActive="active"
+        >
+          <h4>Demographics</h4>
+        </a>
       </div>
     </div>
     <div class="col medication">
