uadded dob control to demographics.htmland ts files

--- a/src/app/demographics/components/demographics/demographics.component.html
+++ b/src/app/demographics/components/demographics/demographics.component.html
@@ -58,6 +58,7 @@
           <mat-label>D.O.B(DD/MM/YY)</mat-label>
           <input
             matInput
+            formControlName="dob"
             readonly
             [matDatepicker]="picker"
             [min]="minDate"
