demo data view on dashboard

--- a/src/app/demographics/components/view-demographics/view-demographics.component.html
+++ b/src/app/demographics/components/view-demographics/view-demographics.component.html
@@ -1,1 +1,20 @@
-<p>view-demographics works!</p>
+<div class="demo-button-container">
+  <button mat-raised-button class="demo-button">Edit data</button>
+  <button mat-raised-button class="demo-button">Delete data</button>
+</div>
+<br />
+<div class="table-responsive">
+  <table class="table table-bordered table-hover border-primary">
+    <tr class="bg-primary">
+      <th colspan="14">Patient Demographics View</th>
+    </tr>
+    <tr>
+      <th scope="column" *ngFor="let col of columns">{{ col }}</th>
+    </tr>
+    <tr *ngFor="let user of viewdemo">
+      <td scope="row" *ngFor="let col of index">
+        {{ user[col] }}
+      </td>
+    </tr>
+  </table>
+</div>
