successfully message is printed and also working on update data

--- a/src/app/demographics/components/view-demographics/view-demographics.component.html
+++ b/src/app/demographics/components/view-demographics/view-demographics.component.html
@@ -1,5 +1,7 @@
 <div class="demo-button-container">
-  <button mat-raised-button class="btn btn-primary mr-2">Edit data</button>
+  <button mat-raised-button class="btn btn-primary mr-2" (click)="editData()">
+    Edit data
+  </button>
   <button mat-raised-button class="btn btn-danger ml-2" (click)="deletedDemo()">
     Delete data
   </button>
