--- a/src/app/demographics/components/demographics/demographics.component.html
+++ b/src/app/demographics/components/demographics/demographics.component.html
@@ -1,9 +1,20 @@
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb breadcumb-ol">
+  <ol class="breadcrumb">
     <li class="breadcrumb-item">
       <a [routerLink]="['/dashboard/patient-dashboard']">Home</a>
     </li>
     <!-- <li class="breadcrumb-item active" aria-current="page">Demographics</li> -->
+  </ol>
+
+  <ol class="breadcrumb breadcumb-ol" *ngIf="demographics">
+    <li class="breadcrumb-item">
+      <a href="javascript:void(0)" (click)="delete()">Delete</a>
+    </li>
+    <li class="breadcrumb-item">
+      <a href="javascript:void(0)" (click)="isEdit = !isEdit">{{
+        isEdit ? "View" : "Edit"
+      }}</a>
+    </li>
   </ol>
 </nav>
 <div class="container">
@@ -22,246 +33,348 @@
       >
 
       <div class="row">
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="first-name">First Name </mat-label>
-          <input
-            id="first-name"
-            matInput
-            type="text"
-            formControlName="firstname"
-            name="firstname"
-          />
-          <mat-hint
-            *ngIf="
-              getControl('firstname')?.touched &&
-              getControl('firstname')?.errors
-            "
-          >
-            <p *ngIf="getControl('firstname')?.errors?.required">
-              First Name is required
-            </p>
-            <p *ngIf="getControl('firstname')?.errors?.minlength">
-              Enter atleast 5 chars for first name
-            </p>
-          </mat-hint>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="firstname">First Name </mat-label>
+            <input
+              id="firstname"
+              matInput
+              type="text"
+              formControlName="firstname"
+              name="firstname"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('firstname')?.touched &&
+                getControl('firstname')?.errors
+              "
+            >
+              <p *ngIf="getControl('firstname')?.errors?.required">
+                First Name is required
+              </p>
+              <p *ngIf="getControl('firstname')?.errors?.minlength">
+                Enter atleast 5 chars for first name
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">First Name</div>
+            <div>{{ demographics.firstname }}</div>
+          </div>
+        </div>
 
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="last-name">Last Name </mat-label>
-          <input
-            id="last-name"
-            type="text"
-            matInput
-            formControlName="lastname"
-          />
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="lastname">Last Name </mat-label>
+            <input
+              id="lastname"
+              type="text"
+              matInput
+              name="lastname"
+              formControlName="lastname"
+            />
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Last Name</div>
+            <div>{{ demographics.lastname }}</div>
+          </div>
+        </div>
 
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label>D.O.B(DD/MM/YY)</mat-label>
-          <input
-            matInput
-            formControlName="dob"
-            readonly
-            [matDatepicker]="picker"
-            [min]="minDate"
-            [max]="maxDate"
-          />
-          <mat-datepicker-toggle
-            matSuffix
-            [for]="picker"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label>D.O.B(DD/MM/YYYY)</mat-label>
+            <input
+              matInput
+              formControlName="dob"
+              readonly
+              [matDatepicker]="picker"
+              [min]="minDate"
+              [max]="maxDate"
+            />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="picker"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">D.O.B(DD/MM/YYYY)</div>
+            <div>{{ demographics.dob | date: "dd/MM/yyyy" }}</div>
+          </div>
+        </div>
 
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label>Gender</mat-label>
-          <mat-select formControlName="gender">
-            <mat-option value="male">Male</mat-option>
-            <mat-option value="female">female</mat-option>
-          </mat-select>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label>Gender</mat-label>
+            <mat-select formControlName="gender">
+              <mat-option value="male">Male</mat-option>
+              <mat-option value="female">female</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Gender</div>
+            <div>{{ demographics.gender }}</div>
+          </div>
+        </div>
       </div>
     </mat-card>
 
     <mat-card class="mb-2 px-lg-5">
       <mat-card-header class="text-primary">Patient Address </mat-card-header>
       <div class="row">
-        <mat-form-field class="col-sm-12 col-md-12">
-          <mat-label for="address">Address</mat-label>
+        <div class="col-sm-12 col-md-12">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="address">Address</mat-label>
+            <input
+              id="address"
+              type="text"
+              matInput
+              formControlName="address"
+              name="address"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('address')?.touched && getControl('address')?.errors
+              "
+            >
+              <p *ngIf="getControl('address')?.errors?.required">
+                Address is required
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Address</div>
+            <div>{{ demographics.address }}</div>
+          </div>
+        </div>
 
-          <input id="address" type="text" matInput formControlName="address" />
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="phone">Contact Information </mat-label>
+            <input
+              id="phone"
+              type="number"
+              matInput
+              formControlName="phone"
+              (keypress)="keyPress($event)"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('phone')?.touched && getControl('phone')?.errors
+              "
+            >
+              <p *ngIf="getControl('phone')?.errors?.required">
+                Number is required
+              </p>
+              <p *ngIf="getControl('phone')?.errors?.minlength">
+                Enter atleast 10 number for phone number
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Contact Information</div>
+            <div>{{ demographics.phone }}</div>
+          </div>
+        </div>
 
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="phone">Contact Information </mat-label>
-          <input
-            id="phone"
-            type="text"
-            matInput
-            formControlName="phone"
-            (keypress)="keyPress($event)"
-          />
-          <mat-hint
-            *ngIf="getControl('phone')?.touched && getControl('phone')?.errors"
-          >
-            <p *ngIf="getControl('phone')?.errors?.required">
-              Number is required
-            </p>
-            <p *ngIf="getControl('phone')?.errors?.minlength">
-              Enter atleast 10 number for phone number
-            </p>
-          </mat-hint>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="Education">Education</mat-label>
 
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="Education">Education</mat-label>
+            <input
+              id="Education"
+              type="text"
+              matInput
+              formControlName="education"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('education')?.touched &&
+                getControl('education')?.errors
+              "
+            >
+              <p *ngIf="getControl('education')?.errors?.required">
+                Education is required
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Education</div>
+            <div>{{ demographics.education }}</div>
+          </div>
+        </div>
 
-          <input
-            id="Education"
-            type="text"
-            matInput
-            formControlName="education"
-          />
-          <mat-hint
-            *ngIf="
-              getControl('education')?.touched &&
-              getControl('education')?.errors
-            "
-          >
-            <p *ngIf="getControl('education')?.errors?.required">
-              Education is required
-            </p>
-          </mat-hint>
-        </mat-form-field>
-
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="occupation">Occupation/Employment </mat-label>
-          <input
-            id="occupation"
-            type="text"
-            matInput
-            formControlName="occupation"
-          />
-          <mat-hint
-            *ngIf="
-              getControl('occupation')?.touched &&
-              getControl('occupation')?.errors
-            "
-          >
-            <p *ngIf="getControl('occupation')?.errors?.required">
-              Occupation is required
-            </p>
-          </mat-hint>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="occupation">Occupation/Employment </mat-label>
+            <input
+              id="occupation"
+              type="text"
+              matInput
+              formControlName="occupation"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('occupation')?.touched &&
+                getControl('occupation')?.errors
+              "
+            >
+              <p *ngIf="getControl('occupation')?.errors?.required">
+                Occupation is required
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Occupation/Employment</div>
+            <div>{{ demographics.occupation }}</div>
+          </div>
+        </div>
       </div>
     </mat-card>
+
     <mat-card class="mb-2 px-lg-5">
       <mat-card-header class="text-primary"
         >Patient Medical History
       </mat-card-header>
       <div class="row">
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="Ethnicity">Ethnicity/Race </mat-label>
-          <input
-            id="Ethnicity"
-            type="text"
-            matInput
-            formControlName="ethnicity"
-          />
-          <mat-hint
-            *ngIf="
-              getControl('ethnicity')?.touched &&
-              getControl('ethnicity')?.errors
-            "
-          >
-            <p *ngIf="getControl('ethnicity')?.errors?.required">
-              Ethnicity is required
-            </p>
-          </mat-hint>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="Ethnicity">Ethnicity/Race </mat-label>
+            <input
+              id="Ethnicity"
+              type="text"
+              matInput
+              formControlName="ethnicity"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('ethnicity')?.touched &&
+                getControl('ethnicity')?.errors
+              "
+            >
+              <p *ngIf="getControl('ethnicity')?.errors?.required">
+                Ethnicity is required
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Ethnicity/Race</div>
+            <div>{{ demographics.ethnicity }}</div>
+          </div>
+        </div>
 
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="medical">Medical History</mat-label>
-          <input id="medical" type="text" matInput formControlName="medical" />
-          <mat-hint
-            *ngIf="
-              getControl('medical')?.touched && getControl('medical')?.errors
-            "
-          >
-            <p *ngIf="getControl('medical')?.errors?.required">
-              Medical is required
-            </p>
-          </mat-hint>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="medical">Medical History</mat-label>
+            <input
+              id="medical"
+              type="text"
+              matInput
+              formControlName="medical"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('medical')?.touched && getControl('medical')?.errors
+              "
+            >
+              <p *ngIf="getControl('medical')?.errors?.required">
+                Medical is required
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Medical History</div>
+            <div>{{ demographics.medical }}</div>
+          </div>
+        </div>
 
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="familymedical">Family medical history</mat-label>
-          <input
-            id="familymedical"
-            type="text"
-            matInput
-            formControlName="familymedical"
-          />
-          <mat-hint
-            *ngIf="
-              getControl('familymedical')?.touched &&
-              getControl('familymedical')?.errors
-            "
-          >
-            <p *ngIf="getControl('familymedical')?.errors?.required">
-              Family Medical History is required
-            </p>
-          </mat-hint>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="familymedical">Family medical history</mat-label>
+            <input
+              id="familymedical"
+              type="text"
+              matInput
+              formControlName="familymedical"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('familymedical')?.touched &&
+                getControl('familymedical')?.errors
+              "
+            >
+              <p *ngIf="getControl('familymedical')?.errors?.required">
+                Family Medical History is required
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Family medical history</div>
+            <div>{{ demographics.familymedical }}</div>
+          </div>
+        </div>
 
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="surgeries">Surgeries</mat-label>
-          <input
-            id="surgeries"
-            type="text"
-            matInput
-            formControlName="surgeries"
-          />
-          <mat-hint
-            *ngIf="
-              getControl('surgeries')?.touched &&
-              getControl('surgeries')?.errors
-            "
-          >
-            <p *ngIf="getControl('surgeries')?.errors?.required">
-              Surgeries is required
-            </p>
-          </mat-hint>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="surgeries">Surgeries</mat-label>
+            <input
+              id="surgeries"
+              type="text"
+              matInput
+              formControlName="surgeries"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('surgeries')?.touched &&
+                getControl('surgeries')?.errors
+              "
+            >
+              <p *ngIf="getControl('surgeries')?.errors?.required">
+                Surgeries is required
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Surgeries</div>
+            <div>{{ demographics.surgeries }}</div>
+          </div>
+        </div>
 
-        <mat-form-field class="col-sm-12 col-md-6">
-          <mat-label for="insurance">Insurance provider</mat-label>
-          <input
-            id="insurance"
-            type="text"
-            matInput
-            formControlName="insurance"
-          />
-          <mat-hint
-            *ngIf="
-              getControl('insurance')?.touched &&
-              getControl('insurance')?.errors
-            "
-          >
-            <p *ngIf="getControl('insurance')?.errors?.required">
-              Insurance provider is required
-            </p>
-          </mat-hint>
-        </mat-form-field>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label for="insurance">Insurance provider</mat-label>
+            <input
+              id="insurance"
+              type="text"
+              matInput
+              formControlName="insurance"
+            />
+            <mat-hint
+              *ngIf="
+                getControl('insurance')?.touched &&
+                getControl('insurance')?.errors
+              "
+            >
+              <p *ngIf="getControl('insurance')?.errors?.required">
+                Insurance provider is required
+              </p>
+            </mat-hint>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label">Insurance provider</div>
+            <div>{{ demographics.insurance }}</div>
+          </div>
+        </div>
       </div>
     </mat-card>
-    <div class="d-flex justify-content-center mt-4">
+
+    <div class="d-flex justify-content-center mt-4" *ngIf="isEdit">
       <button type="submit" class="btn" mat-raised-button color="primary">
         Submit
       </button>
     </div>
   </form>
-  <div
+  <!-- <div
     *ngIf="alert"
     class="alert alert-success alert-dismissible fade show"
     role="alert"
@@ -276,5 +389,5 @@
     >
       <span aria-hidden="true">&times;</span>
     </button>
-  </div>
+  </div> -->
 </div>
