--- a/src/app/demographics/components/demographics/demographics.component.scss
+++ b/src/app/demographics/components/demographics/demographics.component.scss
@@ -11,6 +11,14 @@ mat-form-field {
 }
 
 :host {
+  nav {
+    display: flex;
+    justify-content: space-between;
+    background: #e9ecef;
+    ol {
+      margin-bottom: 0;
+    }
+  }
   ::ng-deep {
     .bg-primary .mat-card-header-text {
       margin: 0 8px;
@@ -19,4 +27,9 @@ mat-form-field {
       margin: 0;
     }
   }
+}
+.field-label {
+  color: rgba(0, 0, 0, 0.54);
+  font-size: 12px;
+  font-weight: 500;
 }
