worked on create and delete appointments

--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -44,7 +44,7 @@
   </li>
   <mat-divider></mat-divider>
   <li class="nav-item menu-button">
-    <a class="nav-link">
+    <a class="nav-link" [routerLink]="['/appointments/schedule-appointment']">
       <mat-icon>calendar_today</mat-icon>
       <span>Appointments</span>
     </a>
