--- a/src/app/appointment/schedule-appointment/modals/delete-appointment/delete-appointment.component.html
+++ b/src/app/appointment/schedule-appointment/modals/delete-appointment/delete-appointment.component.html
@@ -1,8 +1,10 @@
-<h2>Delete Appointment</h2>
+<h2 class="text-center mb-5">Delete Appointment</h2>
 
-<p>Are you sure ?</p>
+<h5 class="text-center font-weight-normal">Are you sure ?</h5>
 
-<div class="d-flex justify-content-center">
-  <button mat-raised-button (click)="delete()">Yes</button>
-  <button mat-raised-button (click)="cancel()">Cancel</button>
+<div class="d-flex justify-content-center mt-5">
+  <button mat-raised-button (click)="cancel()" class="mr-3" color="primary">
+    Cancel
+  </button>
+  <button mat-raised-button (click)="delete()" color="warn">Yes</button>
 </div>
