--- a/src/app/appointment/schedule-appointment/schedule-appointment.component.html
+++ b/src/app/appointment/schedule-appointment/schedule-appointment.component.html
@@ -4,9 +4,12 @@
   </button>
 
   <h2 class="my-5 text-center">Your Appointments</h2>
-  <table *ngIf="isData" mat-table [dataSource]="appointments" class="w-100">
-    Position Column
-
+  <table
+    [ngClass]="{ 'd-none': !isData }"
+    mat-table
+    [dataSource]="appointments"
+    class="w-100"
+  >
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef>Date</th>
       <td mat-cell *matCellDef="let element">{{ element.date | date }}</td>
@@ -27,7 +30,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
-        <button class="bg-transparent border-0" (click)="remove(element)">
+        <button class="bg-transparent border-0" (click)="removeData(element)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </td>
