created billing module, immunization component & mentioned routing

--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -37,7 +37,11 @@
   </li>
   <mat-divider></mat-divider>
   <li class="nav-item menu-button">
-    <a class="nav-link" routerLinkActive="active">
+    <a
+      class="nav-link"
+      [routerLink]="['/immunization']"
+      routerLinkActive="active"
+    >
       <mat-icon>info</mat-icon>
       <span>Immunization</span>
     </a>
@@ -58,7 +62,7 @@
   </li>
   <mat-divider></mat-divider>
   <li class="nav-item menu-button">
-    <a class="nav-link">
+    <a class="nav-link" [routerLink]="['/billing']">
       <mat-icon>payment</mat-icon>
       <span>Billing</span>
     </a>
