--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -37,11 +37,7 @@
   </li>
   <mat-divider></mat-divider>
   <li class="nav-item menu-button">
-    <a
-      class="nav-link"
-      [routerLink]="['/immunization']"
-      routerLinkActive="active"
-    >
+    <a class="nav-link" routerLinkActive="active">
       <mat-icon>info</mat-icon>
       <span>Immunization</span>
     </a>
@@ -62,7 +58,7 @@
   </li>
   <mat-divider></mat-divider>
   <li class="nav-item menu-button">
-    <a class="nav-link" [routerLink]="['/billing']">
+    <a class="nav-link">
       <mat-icon>payment</mat-icon>
       <span>Billing</span>
     </a>
