paitient immunization UI and also service working

--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -37,7 +37,11 @@
   </li>
   <mat-divider></mat-divider>
   <li class="nav-item menu-button">
-    <a class="nav-link" routerLinkActive="active">
+    <a
+      class="nav-link"
+      routerLinkActive="active"
+      routerLink="./immunization-details"
+    >
       <mat-icon>info</mat-icon>
       <span>Immunization</span>
     </a>
