--- a/src/app/immunization-details/components/imm-details/imm-details.component.html
+++ b/src/app/immunization-details/components/imm-details/imm-details.component.html
@@ -1,1 +1,136 @@
-<p>imm-details works!</p>
+<div class="container">
+  <form
+    (ngSubmit)="onSubmit(immForm, formDirective)"
+    class="p-3 w-100"
+    [formGroup]="immForm"
+    #formDirective="ngForm"
+  >
+    <mat-card-header class="bg-primary text-white mb-2 p-2 rounded"
+      ><h4>Immunization Record</h4>
+    </mat-card-header>
+    <mat-card class="mb-2 px-lg-5">
+      <mat-card-header class="text-primary mb-2 py-1 rounded"
+        >COVID-19 Vaccine</mat-card-header
+      >
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label>Vaccine Name</mat-label>
+            <mat-select formControlName="vaccinename">
+              <mat-option value="Covishield">Covishield</mat-option>
+              <mat-option value="Covaxin"> Covaxin </mat-option>
+            </mat-select>
+            <mat-error>Please choose a vaccine Name</mat-error>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label font-weight-bold">Vaccine Name</div>
+            <div>{{ immunization.vaccinename }}</div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <mat-label>Number Of Doses </mat-label>
+          <section *ngIf="isEdit">
+            <mat-checkbox color="primary" required formControlName="doses1"
+              >1</mat-checkbox
+            >
+          </section>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label font-weight-bold">Doses 1</div>
+            <div>vaccinated</div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label>Date(DD/MM/YYYY)</mat-label>
+            <input
+              matInput
+              readonly
+              [matDatepicker]="picker"
+              formControlName="date"
+            />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="picker"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <section *ngIf="isEdit">
+            <mat-checkbox
+              color="primary"
+              [disabled]="true"
+              formControlName="doses2"
+              [required]="true"
+              >2</mat-checkbox
+            >
+          </section>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label>Date(DD/MM/YYYY)</mat-label>
+            <input
+              matInput
+              [matDatepicker]="picker1"
+              (click)="myFilter()"
+              formControlName="date1"
+              [disabled]="true"
+              [readonly]="true"
+            />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="picker1"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
+    </mat-card>
+    <mat-card class="mb-2 px-lg-5">
+      <mat-card-header class="text-primary"
+        >Other general Vaccines
+      </mat-card-header>
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <mat-form-field *ngIf="isEdit">
+            <mat-label>Vaccine Type</mat-label>
+            <mat-select formControlName="vaccinetype">
+              <mat-option value="Hepatitis A">Hepatitis A</mat-option>
+              <mat-option value="Hepatitis B">Hepatitis B</mat-option>
+              <mat-option value="Human papillomavirus"
+                >Human papillomavirus</mat-option
+              >
+              <mat-option value="HIB">HIB</mat-option>
+              <mat-option value="HIB">IPV</mat-option>
+              <mat-option value="MMR">MMR</mat-option>
+              <mat-option value="Rotavirus">Rotavirus</mat-option>
+              <mat-option value="DTap">DTap</mat-option>
+              <mat-option value="Meningococcal ACWY"
+                >Meningococcal ACWY</mat-option
+              >
+              <mat-option value="Influenza">Influenza</mat-option>
+              <mat-option value="Pneumococcal conjugate"
+                >Pneumococcal conjugate</mat-option
+              >
+              <mat-option value="Zoster">Zoster</mat-option>
+              <mat-option value="Other">Other</mat-option>
+            </mat-select>
+            <mat-error>Please choose a vaccine type</mat-error>
+          </mat-form-field>
+          <div class="mb-2" *ngIf="!isEdit">
+            <div class="field-label font-weight-bold">Vaccine Type</div>
+            <div>{{ immunization.vaccinetype }}</div>
+          </div>
+        </div>
+      </div>
+    </mat-card>
+
+    <div class="d-flex justify-content-center mt-4">
+      <button type="submit" class="btn" mat-raised-button color="primary">
+        Submit
+      </button>
+    </div>
+  </form>
+</div>
