worked on id to get data & implemented method in authservice

--- a/src/app/demographics/components/demographics/demographics.component.html
+++ b/src/app/demographics/components/demographics/demographics.component.html
@@ -17,7 +17,7 @@
     </li>
   </ol>
 </nav>
-<div class="container">
+<div class="container" *ngIf="!isLoading">
   <form
     [formGroup]="demoForm"
     (ngSubmit)="onSubmit(demoForm, formDirective)"
