worked on registerd and login backend validations

--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -49,6 +49,13 @@
       <span>Appointments</span>
     </a>
   </li>
+
+  <li class="nav-item menu-button">
+    <a class="nav-link" [routerLink]="['/appointments/calender']">
+      <mat-icon>calendar_today</mat-icon>
+      <span>Appointments Calender</span>
+    </a>
+  </li>
   <mat-divider></mat-divider>
   <li class="nav-item menu-button">
     <a class="nav-link">
