--- a/src/app/main-application/main-application.component.html
+++ b/src/app/main-application/main-application.component.html
@@ -3,7 +3,7 @@
     class="w-100"
     (sidenavToggle)="sidenav.toggle()"
     (logout)="logOut()"
-    [username]="user_name"
+    [username]="user.firstName"
   ></app-header>
 </mat-toolbar>
 <mat-sidenav-container class="h-100">
