--- a/src/app/user/components/auth/login/login.component.html
+++ b/src/app/user/components/auth/login/login.component.html
@@ -1,10 +1,12 @@
+<ng-template appPlaceholder></ng-template>
+
 <section class="container my-5">
   <a [routerLink]="['/']" class="text-center d-block mb-4"
     ><img src="../../../../../assets/images/pp-logo.jpg" alt="" />
   </a>
-  <div class="alert alert-danger" *ngIf="error">
+  <!-- <div class="alert alert-danger col-md-6 offset-md-3" *ngIf="error">
     <p>{{ error }}</p>
-  </div>
+  </div> -->
   <div *ngIf="isLoading" class="text-center">
     <app-loader></app-loader>
   </div>
