--- a/src/app/user/components/profile/profile.component.html
+++ b/src/app/user/components/profile/profile.component.html
@@ -9,7 +9,7 @@
       <h4 class="font-weight-medium mb-0">
         {{ profile.firstName | titlecase }} {{ profile.lastName | titlecase }}
       </h4>
-      <div class="text-muted mb-2">ID: {{ profile.userId }}</div>
+      <div class="text-muted mb-2">ID: {{ profile.id }}</div>
       <!-- <a  class="btn btn-primary btn-sm">Edit</a>&nbsp;
       <a class="btn btn-default btn-sm">Profile</a
       >&nbsp; -->
