--- a/src/app/appointment/schedule-appointment/modals/create-appointment/create-appointment.component.html
+++ b/src/app/appointment/schedule-appointment/modals/create-appointment/create-appointment.component.html
@@ -1,7 +1,15 @@
+<h3 class="text-center mb-4">Book a appointment</h3>
+
 <form [formGroup]="appointmentForm" (ngSubmit)="createAppointment()">
   <mat-form-field appearance="standard" class="w-100">
     <mat-label>Pick a date</mat-label>
-    <input matInput [matDatepicker]="picker" formControlName="date" />
+    <input
+      matInput
+      [matDatepicker]="picker"
+      formControlName="date"
+      [max]="maxDate"
+      [min]="minDate"
+    />
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
